rover_ws_ri/log/build_2023-05-25_12-56-18/locomotion_core/stderr.log
  File "/home/rover4-i/rover_ws_ri/install/locomotion_core/lib/python3.8/site-packages/locomotion_core/enable_gpiocontrol.py", line 8
    GPIO.setmode(GPIO.BOARD) GPIO.setup(led_pin, GPIO.OUT, initial=GPIO.LOW)
                             ^
SyntaxError: invalid syntax

